--- a/7segment_led/CMakeLists.txt
+++ b/7segment_led/CMakeLists.txt
@@ -11,6 +11,11 @@ set(CMAKE_CXX_FLAGS "-Wall -std=c++1y")
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR})
 
+set(PROJECT_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
+include_directories(
+  ${PROJECT_INCLUDE_DIR}
+)
+
 add_executable(${PROJECT_NAME}.out
   7seg.cpp
 )
